<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/row_Layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:id="@+id/event_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_text"
                android:textColor="#009688"
                android:textSize="35sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/event_title"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/event_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:text="@string/title_text"
                android:textColor="#9C27B0"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/event_date"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/event_id" />

            <TextView
                android:id="@+id/event_course"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/event_description"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/event_title" />

            <TextView
                android:id="@+id/event_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="28dp"
                android:text="@string/date_text"
                android:textColor="#E91E63"
                app:layout_constraintBottom_toTopOf="@+id/event_description"
                app:layout_constraintEnd_toStartOf="@+id/event_time"
                app:layout_constraintHorizontal_bias="0.915"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/event_title"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/event_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_text"
                android:textColor="#FF5722"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/event_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/event_description"
                app:layout_constraintTop_toTopOf="@+id/event_date" />

            <TextView
                android:id="@+id/event_description"
                android:layout_width="104dp"
                android:layout_height="21dp"
                android:layout_marginEnd="92dp"
                android:text="@string/description_text"
                android:textColor="#4CAF50"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@+id/event_course"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>