<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingHorizontal="20sp"
tools:context=".ui.home.StudyPlanFragment">


<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/StudyPlanRecyclerView"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:paddingTop="?attr/actionBarSize"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/addButtonStudyPlan"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:contentDescription="@string/image_desc"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.943"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.955"
    app:srcCompat="@android:drawable/ic_input_add" />

<ImageView
    android:id="@+id/empty_image"
    android:layout_width="204dp"
    android:layout_height="160dp"
    android:alpha="0.3"
    android:contentDescription="@string/string_cloud_message"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.497"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.375"
    app:srcCompat="@drawable/ic_cloud" />

<TextView
    android:id="@+id/NoData_text"
    android:layout_width="184dp"
    android:layout_height="34dp"
    android:layout_marginTop="4dp"
    android:alpha="0.4"
    android:text="@string/string_no_data"
    android:textAlignment="center"
    android:textSize="24sp"
    android:textStyle="bold"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.497"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/empty_image"
    app:layout_constraintVertical_bias="0.035" />
</androidx.constraintlayout.widget.ConstraintLayout>